<resources>
    <string name="app_name">Fincol</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="create_an_user">Create an user.</string>
    <string name="new_to_fincol">New to Fincol?</string>
    <string name="sign_in">Sign in</string>
    <string name="log_in_with_the_facebook">Facebook</string>
    <string name="log_in_with_google">Google</string>
    <string name="user_image">User Image</string>
    <string name="name">Name</string>
    <string name="confirm_e_mail">Confirm e-mail</string>
    <string name="confirm_password">Confirm password</string>
    <string name="create_user">Create user</string>
    <string name="password_mismatch">Password mismatch.</string>
    <string name="e_mail_mismatch">E-mail mismatch.</string>
    <string name="name_is_required">Name is required.</string>
    <string name="e_mail_is_required">E-mail is required.</string>
    <string name="password_required">Password is required.</string>
    <string name="password_is_required">Password is required.</string>
    <string name="e_mail_invalid">E-mail invalid.</string>
    <string name="incorrect_e_mail_pass">Incorrect e-mail or password</string>
    <string name="sign_out">Sign out</string>
    <string name="delete_user">Delete user</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_statement">Statement</string>
    <string name="menu_account">My Accounts</string>
    <string name="edit_profile">Edit profile</string>
    <string name="profile">Profile</string>
    <string name="account_box">Account box</string>
    <string name="name_edit">Name Edit</string>
    <string name="edit_image">Edit image</string>
    <string name="fincol">Fincol</string>
    <string name="ok">Ok</string>
    <string name="crop_image_failure_message">crop_image_failure_message</string>
    <string name="permissions_not_granted">Permissions not granted.</string>
    <string name="permissions_granted">Permissions granted</string>
    <string name="allow_media_access">Allow media access.</string>
    <string name="no_image">no_image</string>
    <string name="camera">camera</string>
    <string name="welcome_fincol">Welcome to Fincol!</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="come_back_soon">Come back soon!</string>
    <string name="bye">Bye!</string>
    <string name="new_">New</string>
    <string name="new_account">New Account</string>
    <string name="account">Account</string>
    <string name="account_image">account image</string>
    <string name="add_collaborator">Add new collaborator</string>
    <string name="save">Save</string>
    <string name="account_name">Account name</string>
    <string name="list_of_collaborators">List of collaborators</string>
    <string name="add">Add</string>
    <string name="saved_uid_user_key">saved_uid_user_key</string>
    <string name="preference_file_key">preference_file_key</string>
    <string name="delete_account">Delete Account</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="account_deleted">Account deleted!</string>
    <string name="account_saved">Account saved!</string>
    <string name="main">Main</string>
    <string name="delete_main_account">Main account cannot be deleted!</string>
    <string name="email_not_found">E-mail not found on Fincol!</string>
    <string name="collaborator_added">Collaborator added!</string>
    <string name="status">Status</string>
    <string name="type">Type</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="inactive">Inactive</string>
    <string name="active_account">Active account</string>
    <string name="active">Active</string>
    <string name="forgot_email">Password reset e-mail has been sent!</string>
    <string name="transaction">Transaction</string>
    <string name="date">Date</string>
    <string name="value">Value</string>
    <string name="location">Location</string>
    <string name="description">Description</string>
    <string name="fixed">Fixed</string>
    <string name="repeat">Repeat</string>
    <string name="value_is_required">Value is required.</string>
    <string name="saved_account_id_key">saved_account_id_key</string>
    <string name="balance_now">Balance now</string>
    <string name="transaction_inserted">Transaction inserted.</string>
    <string name="add_category">Add category</string>
    <string name="new_category">New category</string>
    <string name="category">Category</string>
    <string name="select_future_date">Select a future date to schedule transactions.</string>
    <string name="category_required">Category is required.</string>
    <string name="or_sign_in_with">Or sign in with</string>
    <string name="under_construction">Under construction</string>
    <string-array name="transaction_list">
        <item>Expense</item>
        <item>Income</item>
    </string-array>
    <string-array name="repeat_list">
        <item>2x</item>
        <item>3x</item>
        <item>4x</item>
        <item>5x</item>
        <item>6x</item>
        <item>7x</item>
        <item>8x</item>
        <item>9x</item>
        <item>10x</item>
        <item>11x</item>
        <item>12x</item>
    </string-array>
    <string-array name="period_list">
        <item>7 days</item>
        <item>15 days</item>
        <item>30 days</item>
        <item>60 days</item>
        <item>90 days</item>
    </string-array>
</resources>